--- a/assets/base.css
+++ b/assets/base.css
@@ -3517,3 +3517,81 @@ details-disclosure > details {
     --border-offset: 0px; /* Prevent the border from growing on buttons when this effect is on. */
   }
 }
+
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('PlusJakartaSans-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('PlusJakartaSans-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('PlusJakartaSans-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('PlusJakartaSans-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('PlusJakartaSans-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('PlusJakartaSans-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src: url('PlusJakartaSans-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BeautiqueDisplay';
+  src: url('BeautiqueDisplay-Black.otf') format("opentype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BeautiqueDisplay';
+  src: url('BeautiqueDisplay-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BeautiqueDisplay';
+  src: url('BeautiqueDisplay-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BeautiqueDisplay';
+  src: url('BeautiqueDisplay-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BeautiqueDisplay';
+  src: url('BeautiqueDisplay-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
