--- a/sections/web-cg-about.liquid
+++ b/sections/web-cg-about.liquid
@@ -1,24 +1,11 @@
-{{ 'section-main-page.css' | asset_url | stylesheet_tag }}
-
-{%- style -%}
-  .section-{{ section.id }}-padding {
-    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
-    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
-  }
-
-  @media screen and (min-width: 750px) {
-    .section-{{ section.id }}-padding {
-      padding-top: {{ section.settings.padding_top }}px;
-      padding-bottom: {{ section.settings.padding_bottom }}px;
-    }
-  }
-{%- endstyle -%}
-
-<div class="page-width section-{{ section.id }}-padding">
-    <div class="box-heading-container">
-        <div class="box-heading">
-            <h1>{{section.settings.heading}}</h1>
-            <div>{{section.settings.sub_heading}}</div>
+{{ 'about.css' | asset_url | stylesheet_tag }}
+<div class="section-heading">
+    <div class="page-width section-{{ section.id }}-padding">
+        <div class="box-heading-container">
+            <div class="box-heading">
+                <h1>{{section.settings.heading}}</h1>
+                <p>{{section.settings.sub_heading}}</p>
+            </div>
         </div>
     </div>
 </div>
