--- a/snippets/about-block-1.liquid
+++ b/snippets/about-block-1.liquid
@@ -1,10 +1,14 @@
-<div class="d-grid page-width">
-    <div class="box_block_1">
-        <h2>{{ block.settings.block_heading_1 }}</h2>
-        <p>{{block.settings.block_subheading_1}}</p>
-    </div>
-    <div class="box_block_1">
-        <h2>{{ block.settings.block_heading_2 }}</h2>
-        <p>{{block.settings.block_subheading_2}}</p>
+<div class="container mx-auto py-8 box-vision">
+    <div class="page-width">
+        <div class="grid grid-cols-2 gap-6">
+            <div class="box_block">
+                <h2>{{ block.settings.block_heading_1 }}</h2>
+                <p>{{block.settings.block_subheading_1}}</p>
+            </div>
+            <div class="box_block">
+                <h2>{{ block.settings.block_heading_2 }}</h2>
+                <p>{{block.settings.block_subheading_2}}</p>
+            </div>
+        </div>
     </div>
 </div>
