--- a/snippets/about-block-2.liquid
+++ b/snippets/about-block-2.liquid
@@ -1,21 +1,28 @@
-<div class="box-content page-width">
-    <h2>{{block.settings.block2_header_heading}}</h2>
-    <div class="d-grid">
-        <div class="box_block_1">
-            <h2>{{ block.settings.block2_heading_1 }}</h2>
-            <p>{{block.settings.block2_subheading_1}}</p>
-        </div>
-        <div class="box_block_2">
-            <h2>{{ block.settings.block2_heading_2 }}</h2>
-            <p>{{block.settings.block2_subheading_2}}</p>
-        </div>
-        <div class="box_block_3">
-            <h2>{{ block.settings.block2_heading_3 }}</h2>
-            <p>{{block.settings.block2_subheading_3}}</p>
-        </div>
-        <div class="box_block_4">
-            <h2>{{ block.settings.block2_heading_3 }}</h2>
-            <p>{{block.settings.block2_subheading_3}}</p>
+<div class="box-content">
+    <div class="page-width mt-8">
+        <h2
+            class="text-2xl font-semibold">{{block.settings.block2_header_heading}}</h2>
+        <div class="grid grid-cols-4 gap-12">
+            <div class="box_block">
+                <h3 class="text-xl font-semibold">{{
+                    block.settings.block2_heading_1 }}</h3>
+                <p class="mt-2">{{block.settings.block2_subheading_1}}</p>
+            </div>
+            <div class="box_block">
+                <h3 class="text-xl font-semibold">{{
+                    block.settings.block2_heading_2 }}</h3>
+                <p class="mt-2">{{block.settings.block2_subheading_2}}</p>
+            </div>
+            <div class="box_block">
+                <h3 class="text-xl font-semibold">{{
+                    block.settings.block2_heading_3 }}</h3>
+                <p class="mt-2">{{block.settings.block2_subheading_3}}</p>
+            </div>
+            <div class="box_block">
+                <h3 class="text-xl font-semibold">{{
+                    block.settings.block2_heading_4 }}</h3>
+                <p class="mt-2">{{block.settings.block2_subheading_4}}</p>
+            </div>
         </div>
     </div>
 </div>
