--- a/assets/base.css
+++ b/assets/base.css
@@ -535,7 +535,8 @@ a:not([href]) {
 
 .circle-divider::after {
   content: '\2022';
-  margin: 0 1.3rem 0 1.5rem;
+  font-size: 0;
+  margin: 0 1.3rem 0 0;
 }
 
 .circle-divider:last-of-type::after {
