--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -1,13 +1,3 @@
-.article-template > *:first-child:not(.article-template__hero-container) {
-  margin-top: 5rem;
-}
-
-@media screen and (min-width: 750px) {
-  .article-template > *:first-child:not(.article-template__hero-container) {
-    margin-top: calc(5rem + var(--page-width-margin));
-  }
-}
-
 .article-template__hero-container {
   max-width: 130rem;
   margin: 0 auto;
@@ -53,24 +43,8 @@
   }
 }
 
-.article-template header {
-  margin-top: 4.4rem;
-  margin-bottom: 2rem;
-  line-height: calc(0.8 / var(--font-body-scale));
-}
-
-@media screen and (min-width: 750px) {
-  .article-template header {
-    margin-top: 5rem;
-  }
-}
-
 .article-template__title {
   margin: 0;
-}
-
-.article-template__title:not(:only-child) {
-  margin-bottom: 1rem;
 }
 
 .article-template__link {
@@ -87,9 +61,8 @@
   transform: rotate(180deg);
 }
 
-.article-template__content {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+.article-template__content  {
+  margin-top: 24px;
 }
 
 .article-template__social-sharing {
@@ -170,6 +143,81 @@
   }
 }
 
+.section_blog-post {
+  padding: 48px 0 83px;
+  background: #F1E4C5;
+}
+
 .article-template__back:last-child {
-  margin-bottom: 3.2rem;
+  display: none;
+}
+
+.article_blogs-post {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  gap: 30px;
+}
+
+.article-block {
+  margin-bottom: 16px;
+}
+
+.article-block:last-child {
+  margin-bottom: 0;
+}
+
+.sidebar_blogs-post {
+  padding-top: 86px;
+}
+
+.sidebar_blogs-post .blog__title-news {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #3B0B07;
+  margin: 0 0 16px;
+  font-family: 'PlusJakartaSans';
+}
+
+.article-template__title {
+  font-size: 32px;
+  line-height: 40px;
+  letter-spacing: -0.45px;
+  font-weight: 700;
+  margin: 0 0 4px;
+  color: #333;
+  font-family: "Montserrat", sans-serif;
+}
+.article_blogs-post .circle-divider,
+.caption-with-letter-spacing {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: -0.2px;
+  color: #333;
+  font-family: 'PlusJakartaSans';
+  padding-top: 0;
+}
+
+.article-template__content img {
+  border-radius: 8px;
+  width: 100%;
+  display: block;
+}
+
+.article-template__content p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  font-family: 'PlusJakartaSans';
+}
+
+.article-image img {
+  border-radius: 8px;
+}
+
+@media screen and (max-width: 749px) {
+  .article_blogs-post {
+    grid-template-columns: auto;
+  }
 }
