update home page

--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -21,7 +21,7 @@ slideshow-component .slideshow.banner {
   padding: 0;
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   visibility: visible;
 }
 
