--- a/assets/about.css
+++ b/assets/about.css
@@ -39,7 +39,7 @@
     background-size: auto;
 }
 
-.grid {
+.about-box .grid {
     display: grid;
 }
 
@@ -64,6 +64,30 @@
     border: 1px solid #D3A540;
     border-radius: 12px;
     padding: 20px 24px;
+}
+
+.box-vision .box_blocks {
+    padding: 0px 24px;
+    text-align: start;
+}
+
+.box_blocks h1 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 48px;
+    color: rgba(211, 165, 64, 1);
+    font-family: 'BeautiqueDisplay';
+    margin: 0;
+}
+
+.box_block .box_block_flex {
+    display: flex;
+    align-items: end;
+    margin-bottom: 16px;
+}
+
+.box_block .box_block_flex h2 {
+    margin-left: 16px;
 }
 
 .box_block h2 {
