--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -332,7 +332,7 @@
 
 @media screen and (min-width: 990px) {
   .image-with-text__content {
-    padding: 6rem 7rem 7rem;
+    padding: 50px 201px;
   }
 }
 
@@ -414,4 +414,11 @@
   .multirow__inner {
     row-gap: var(--grid-desktop-vertical-spacing);
   }
+}
+
+.page-width-home {
+  margin: 0;
+  width: 100%;
+  padding: 0;
+  max-width: unset;
 }
