--- a/assets/video-section.css
+++ b/assets/video-section.css
@@ -46,3 +46,13 @@
 .video-section__media.media-fit-cover video {
   object-fit: cover;
 }
+.container-video {
+  background: rgba(241, 228, 197, 1);
+}
+.title-video {
+  font-size: 36px;
+  font-weight: 600;
+  color: rgba(59, 11, 7, 1);
+  line-height: 45px;
+  font-family: 'PlusJakartaSans';
+}
