--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,7 +37,7 @@
     <script src="{{ 'jquery.min.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'owl.carousel.min.js' | asset_url }}" defer="defer"></script>
     {{ content_for_header }}
-
+    <script src="{{ 'product.js' | asset_url }}" defer="defer"></script>
     {%- liquid
       assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
       assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
