--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -155,6 +155,11 @@
               {{ card_product.title | escape }}
             </a>
           </h3>
+          <div class="variants-card_product">
+            {%- for variant in product.variants -%}
+              <span>{{variant.title}}</span>
+            {%- endfor -%}
+          </div>
           <div class="card-information">
             {%- if show_vendor -%}
               <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
