--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -46,6 +46,7 @@
   box-sizing: border-box;
   border-radius: var(--border-radius);
   border: var(--border-width) solid rgba(var(--color-foreground), var(--border-opacity));
+  max-height: 235px;
 }
 
 .card--card:after,
@@ -109,6 +110,7 @@
   bottom: 0;
   position: absolute;
   top: 0;
+  max-height: 235px;
 }
 
 .card .media {
