--- a/snippets/about-block-home-1.liquid
+++ b/snippets/about-block-home-1.liquid
@@ -1,4 +1,4 @@
-<div class="container mx-auto py-8 box-vision about-box">
+<div class="containers mx-auto py-8 box-vision about-box">
   <div class="page-width">
     <div class="grid grid-cols-2 gap-6">
       <div class="box_blocks">
