--- a/assets/about.css
+++ b/assets/about.css
@@ -34,9 +34,31 @@
 
 .box-content,
 .box-vision {
-    background-image: url(bg.png);
     background-repeat: repeat;
     background-size: auto;
+}
+
+.box-content-container {
+    background-image: url(bg.png);
+}
+
+.about-box .page-width{
+    padding-left: 136px ;
+    padding-right: 136px ;
+}
+
+@media screen and (max-width: 992px) {
+    .about-box .page-width{
+        padding-left: 36px ;
+        padding-right: 36px ;
+    } 
+}
+
+@media screen and (max-width: 768px) {
+    .about-box .page-width{
+        padding-left: 16px ;
+        padding-right: 16px ;
+    } 
 }
 
 .about-box .grid {
