--- a/assets/base.css
+++ b/assets/base.css
@@ -119,7 +119,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
 @media screen and (min-width: 750px) {
   .page-width {
-    padding: 0 5rem;
+    padding: 0 0;
   }
 
   .header.page-width,
@@ -165,6 +165,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
 .section + .section {
   margin-top: var(--spacing-sections-mobile);
+  background: rgba(241, 228, 197, 1);
 }
 
 @media screen and (min-width: 750px) {
@@ -3595,4 +3596,27 @@ details-disclosure > details {
   src: url('BeautiqueDisplay-Light.otf') format('opentype');
   font-weight: 300;
   font-style: normal;
+}
+
+.icon-zalo {
+  position: fixed;
+  z-index: 999;
+  bottom: 200px;
+  right: 30px
+}
+.icon-phone {
+  position: fixed;
+  z-index: 999;
+  bottom: 120px;
+  right: 30px
+}
+
+.icon-fixed {
+  position: fixed;
+  z-index: 999;
+  bottom: 0;
+  right: 0;
+  li {
+    list-style: none;
+  }
 }
