--- a/assets/feedback-customer.css
+++ b/assets/feedback-customer.css
@@ -60,8 +60,8 @@
   	text-overflow: ellipsis;
     display: block;
   	display: -webkit-box;
-  	height: 24px*1.3*7;
-    & p {
+  	height: 218px;
+    p {
         margin: 0;
     }
 }
