--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -213,6 +213,17 @@ quick-add-modal .product-form__buttons {
   padding: 0.8rem;
   min-width: 100%;
   box-sizing: border-box;
+  margin-top: 16px;
+  background: rgba(211, 165, 64, 1);
+  color: #fff;
+  border-radius: 8px;
+  outline: none;
+  border: solid 1px rgba(211, 165, 64, 1);
+}
+
+.quick-add__submit::after,
+.quick-add__submit::before {
+  display: none;
 }
 
 quick-add-modal .product-media-container.constrain-height {
