--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -278,7 +278,9 @@
 
 @media screen and (min-width: 1440px) {
   .slideshow__slide .slideshow__text-wrapper.banner__content {
-    padding: 201px;
+    padding-left: 194px;
+    padding-top: 201px;
+    padding-right: 16px;
   }
 }
 
