--- a/assets/card-contact.css
+++ b/assets/card-contact.css
@@ -58,14 +58,22 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
   }
+
+  .title-modal-contact {
+    text-align: center;
+    color: rgba(59, 11, 7, 1);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+  }
   
   .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
+    background-color: #f1e4c5;
+    margin: 7.5% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 40%;
