--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -172,9 +172,27 @@
   margin: -3rem auto 0;
 }
 
+@media screen and (min-width: 1280px) {
+  .image-with-text__grid--reverse .image-with-text__content { 
+    padding: 70px 150px;
+  }
+}
+
 @media screen and (min-width: 750px) {
   .image-with-text__grid--reverse .image-with-text__content {
     margin-left: auto;
+    padding: 30px 70px;
+    h2 {
+      color: rgba(211, 165, 64, 1);
+      font-size: 36px;
+      line-height: 57px;
+      font-weight: 700;
+    }
+    h6 {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+    }
   }
 
   .image-with-text__content--bottom {
