--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -2,6 +2,9 @@
   max-width: 130rem;
   margin: 0 auto;
 }
+.article-template {
+  text-align: justify;
+}
 
 .article-template__hero-small {
   height: 11rem;
