--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -352,6 +352,15 @@
           </a>
         </li>
       </ul>
+      <!-- Modal Popup for Contact -->
+      <div id="contactModal" class="modal">
+        <div class="modal-content">
+          <span class="close-btn" onclick="closeModal()">&times;</span>
+          <h2 class="title-modal-contact">Đăng ký nhận tư vấn</h2>
+          <!-- Include contact form here -->
+          {% section 'contact-form' %}
+        </div>
+      </div>
     </main>
 
     {% sections 'footer-group' %}
