--- a/snippets/about-block-1.liquid
+++ b/snippets/about-block-1.liquid
@@ -1,5 +1,5 @@
-<div class="container mx-auto py-8 box-vision about-box">
-  <div class="page-width">
+<div class="container container-about mx-auto py-8 box-vision about-box">
+  <div class="">
     <div class="grid grid-cols-2 gap-6">
       <div class="box_block">
         <h2>{{ block.settings.block_heading_1 }}</h2>
