--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -279,8 +279,8 @@
 @media screen and (min-width: 1440px) {
   .slideshow__slide .slideshow__text-wrapper.banner__content {
     padding-left: 194px;
-    padding-top: 201px;
     padding-right: 16px;
+    padding-top: 80px;
   }
 }
 
@@ -476,6 +476,13 @@
   max-width: 45rem;
   word-break: break-word;
   background: rgba(211, 165, 64, 1);
+  border-radius: 5px;
+}
+
+.banner__buttons .button {
+  background: rgba(211, 165, 64, 1);
+  border: none;
+  border-radius: 5px;
 }
 
 @media screen and (max-width: 749px) {
